fix: restore unicode in locales

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -62,7 +62,7 @@
     "completed": "مكتمل",
     "inProgress": "قيد التنفيذ",
     "estimatedProgress": "التقدم المقدر",
-    "completionLabel": "????? ???????"
+    "completionLabel": "الإكمال"
   },
   "certificates": {
     "title": "الشهادات",
@@ -83,7 +83,7 @@
     "previous": "السابق",
     "next": "التالي",
     "close": "إغلاق",
-    "descriptionLabel": "?????"
+    "descriptionLabel": "الوصف"
   },
   "projects": {
     "title": "المشاريع",
@@ -143,7 +143,7 @@
     ],
     "typing": "يكتب...",
     "error": "خطأ في الحصول على الرد. يرجى المحاولة مرة أخرى.",
-    "suggestedLabel": "????? ??????:"
+    "suggestedLabel": "أسئلة مقترحة:"
   },
   "common": {
     "loading": "جاري التحميل...",
@@ -158,104 +158,104 @@
     "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
   },
   "qa": {
-    "ask": "??????",
-    "placeholder": "???? ?????...",
-    "suggested": "????? ??????:",
-    "thinking": "???? ???????...",
-    "error": "??? ??? ????? ?????? ??? ???????. ???? ??? ????.",
+    "ask": "اسألني",
+    "placeholder": "اكتب سؤالك...",
+    "suggested": "أسئلة مقترحة:",
+    "thinking": "جارٍ التفكير...",
+    "error": "حدث خطأ أثناء الحصول على الإجابة. حاول مرة أخرى.",
     "suggestions": {
       "skills": [
-        "????? ????? ?????? ?? ?????? ??????????",
-        "?? ???? ????? ?????",
-        "??? ????? ??? ?????????"
+        "لماذا اخترت التخصص في الذكاء الاصطناعي؟",
+        "ما هي أقوى مهارة لديك؟",
+        "كيف تعلمت هذه التقنيات؟"
       ],
       "projects": [
-        "?? ???? ???? ?? ????? Conecta Panam??",
-        "?? ???? ???????? ???? ??????????",
-        "?? ???? ?????? ???? ??????? ?????"
+        "ما أكبر تحدٍ في مشروع Conecta Panamá؟",
+        "ما أكثر التقنيات التي استخدمتها؟",
+        "هل لديك مشاريع ذكاء اصطناعي أخرى؟"
       ],
       "experience": [
-        "???? ????? ?? ???????",
-        "?? ???? ????? ???? ???",
-        "?? ??? ????? ???? ???? ????"
+        "ماذا تعلمت من تجاربك؟",
+        "ما أكبر إنجاز مهني لك؟",
+        "ما نوع العمل الذي تبحث عنه؟"
       ],
       "education": [
-        "????? ???? ???????",
-        "??? ???? ??? ?????? ????????? ???????? ?????????",
-        "?? ?????? ???????????"
+        "لماذا تدرس تخصصين؟",
+        "كيف تجمع بين الذكاء الاصطناعي والهندسة الصناعية؟",
+        "ما أهدافك الأكاديمية؟"
       ]
     }
   },
   "insights": {
-    "title": "????? ?????? ?????? ??????? ?????????",
-    "subtitle": "???? ??? ??? ????? ??? ???? ??????",
-    "generate": "????? ?????",
-    "regenerate": "????? ???????",
-    "careerScore": "???? ?????? ??????",
-    "strengths": "???? ???? ?????",
-    "uniqueValue": "??? ??????",
-    "marketFit": "???????? ?????",
-    "recommendations": "??????",
-    "skillsRadar": "????? ????????",
-    "salaryRange": "???? ?????? ????????",
-    "careerPaths": "?????? ?????",
-    "loading": "???? ????? ????...",
-    "error": "??? ??? ????? ????? ?????. ???? ??? ????.",
+    "title": "تحليل المسار المهني بالذكاء الاصطناعي",
+    "subtitle": "احصل على رؤى مخصصة حول ملفك المهني",
+    "generate": "إنشاء التحليل",
+    "regenerate": "إعادة التوليد",
+    "careerScore": "تقييم المسار المهني",
+    "strengths": "نقاط القوة",
+    "uniqueValue": "القيمة الفريدة",
+    "marketFit": "ملاءمة السوق",
+    "recommendations": "توصيات",
+    "skillsRadar": "رادار المهارات",
+    "salaryRange": "نطاق الراتب التقديري",
+    "careerPaths": "مسارات مهنية",
+    "loading": "جارٍ تحليل ملفك...",
+    "error": "حدث خطأ أثناء إنشاء الرؤى. حاول مرة أخرى.",
     "scoreNote": {
-      "excellent": "??? ???? ?????",
-      "good": "??????? ??? ????",
-      "improve": "??? ???????"
+      "excellent": "ملف مهني ممتاز",
+      "good": "إمكانات نمو جيدة",
+      "improve": "فرص للتحسين"
     },
-    "salaryPeriod": "???",
+    "salaryPeriod": "سنة",
     "radar": {
-      "ai": "?????? ?????????/???? ?????",
-      "programming": "???????",
-      "industrial": "???????",
-      "softSkills": "???????? ???????",
-      "languages": "??????"
+      "ai": "الذكاء الاصطناعي/التعلم الآلي",
+      "programming": "البرمجة",
+      "industrial": "الصناعي",
+      "softSkills": "المهارات الناعمة",
+      "languages": "اللغات"
     }
   },
   "resumeAnalyzer": {
-    "title": "???? ?????? ???????",
-    "subtitle": "???? ??? ????? ?????? ?????? ??????? ?? ???????? ?????",
-    "analyze": "????? ?????? ???????",
-    "reanalyze": "????? ???????",
-    "loading": "???? ????? ?????? ???????...",
-    "completeness": "?????? ?????? ???????",
-    "atsScore": "????? ATS",
-    "sections": "????? ???????",
-    "gaps": "?????? ???????",
-    "strengths": "???? ?????",
-    "improvements": "??????",
-    "overall": "???? ???",
-    "error": "??? ??? ????? ????? ?????? ???????. ???? ??? ????.",
+    "title": "محلل السيرة الذاتية",
+    "subtitle": "احصل على تحليل مفصل لسيرتك الذاتية مع اقتراحات للتحسين",
+    "analyze": "تحليل السيرة الذاتية",
+    "reanalyze": "إعادة التحليل",
+    "loading": "جارٍ تحليل السيرة الذاتية...",
+    "completeness": "اكتمال السيرة الذاتية",
+    "atsScore": "توافق ATS",
+    "sections": "تحليل الأقسام",
+    "gaps": "مجالات التحسين",
+    "strengths": "نقاط القوة",
+    "improvements": "توصيات",
+    "overall": "الملخص العام",
+    "error": "حدث خطأ أثناء تحليل السيرة الذاتية. حاول مرة أخرى.",
     "sectionNames": {
-      "personal": "????????? ???????",
-      "profile": "????? ??????",
-      "education": "???????",
-      "experience": "??????",
-      "skills": "????????",
-      "certificates": "????????",
-      "projects": "????????"
+      "personal": "المعلومات الشخصية",
+      "profile": "الملف الشخصي",
+      "education": "التعليم",
+      "experience": "الخبرة",
+      "skills": "المهارات",
+      "certificates": "الشهادات",
+      "projects": "المشاريع"
     }
   },
   "skillRecommender": {
-    "title": "???? ????????",
-    "subtitle": "????? ???????? ??????? ?????? ????",
-    "generate": "?????? ??? ??????",
-    "regenerate": "????? ???????",
-    "loading": "???? ????? ????...",
-    "recommended": "???????? ?????? ???",
-    "trends": "??????? ?????",
-    "advice": "????? ?????",
-    "difficulty": "???? ???????",
-    "time": "????? ???????",
-    "resources": "???????",
-    "error": "??? ??? ????? ????? ????????. ???? ??? ????.",
+    "title": "توصيات المهارات",
+    "subtitle": "اكتشف مهارات مكملة لتعزيز ملفك",
+    "generate": "الحصول على توصيات",
+    "regenerate": "إعادة التوليد",
+    "loading": "جارٍ تحليل ملفك...",
+    "recommended": "مهارات موصى بها",
+    "trends": "اتجاهات السوق",
+    "advice": "نصيحة مهنية",
+    "difficulty": "الصعوبة",
+    "time": "الوقت التقديري",
+    "resources": "الموارد",
+    "error": "حدث خطأ أثناء إنشاء التوصيات. حاول مرة أخرى.",
     "difficultyLabels": {
-      "easy": "???",
-      "medium": "?????",
-      "hard": "???"
+      "easy": "سهل",
+      "medium": "متوسط",
+      "hard": "صعب"
     }
   }
 }
