--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -170,7 +170,7 @@
         "How did you learn these technologies?"
       ],
       "projects": [
-        "What was the biggest challenge in Conecta Panam??",
+        "What was the biggest challenge in Conecta Panamá?",
         "What technologies did you use most?",
         "Do you have more AI projects?"
       ],
