--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -62,7 +62,7 @@
     "completed": "पूर्ण",
     "inProgress": "जारी",
     "estimatedProgress": "अनुमानित प्रगति",
-    "completionLabel": "?????"
+    "completionLabel": "समापन"
   },
   "certificates": {
     "title": "प्रमाणपत्र",
@@ -83,7 +83,7 @@
     "previous": "पिछला",
     "next": "अगला",
     "close": "बंद करें",
-    "descriptionLabel": "?????"
+    "descriptionLabel": "विवरण"
   },
   "projects": {
     "title": "प्रोजेक्ट्स",
@@ -143,7 +143,7 @@
     ],
     "typing": "टाइप कर रहे हैं...",
     "error": "प्रतिक्रिया प्राप्त करने में त्रुटि। कृपया पुनः प्रयास करें।",
-    "suggestedLabel": "????? ?? ??????:"
+    "suggestedLabel": "सुझाए गए प्रश्न:"
   },
   "common": {
     "loading": "लोड हो रहा है...",
@@ -158,104 +158,104 @@
     "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
   },
   "qa": {
-    "ask": "?????",
-    "placeholder": "???? ?????? ?????...",
-    "suggested": "????? ?? ??????:",
-    "thinking": "??? ??? ???...",
-    "error": "????? ??????? ???? ??? ?????? ???? ??? ?? ?????? ?????",
+    "ask": "पूछें",
+    "placeholder": "अपना प्रश्न लिखें...",
+    "suggested": "सुझाए गए प्रश्न:",
+    "thinking": "सोच रहा हूँ...",
+    "error": "उत्तर प्राप्त करने में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "suggestions": {
       "skills": [
-        "???? AI ??? ?????????? ????? ?????",
-        "???? ???? ????? ???? ???? ???",
-        "???? ?? ??????? ???? ??????"
+        "आपने AI में विशेषज्ञता क्यों चुनी?",
+        "आपकी सबसे मजबूत कौशल क्या है?",
+        "आपने ये तकनीकें कैसे सीखीं?"
       ],
       "projects": [
-        "Conecta Panam? ?? ???? ???? ?????? ???? ???",
-        "???? ???? ??????? ??? ?? ??????? ????? ????",
-        "???? ???? ??? ?? AI ????????? ????"
+        "Conecta Panamá में सबसे बड़ी चुनौती क्या थी?",
+        "आपने सबसे अधिक कौन सी तकनीकें इस्तेमाल कीं?",
+        "क्या आपके पास और AI प्रोजेक्ट हैं?"
       ],
       "experience": [
-        "???? ???? ??????? ?? ???? ?????",
-        "???? ???? ???? ?????? ??????? ???? ????",
-        "?? ??? ?????? ?? ??? ?? ???? ??? ????"
+        "आपने अपने अनुभवों से क्या सीखा?",
+        "आपकी सबसे बड़ी पेशेवर उपलब्धि क्या रही?",
+        "आप किस प्रकार का काम ढूंढ रहे हैं?"
       ],
       "education": [
-        "?? ?? ????????? ????? ??? ??? ????",
-        "?? AI ?? ??????????? ??????????? ?? ??? ???? ?????? ????",
-        "???? ??????? ?????? ???? ????"
+        "आप दो डिग्री क्यों पढ़ रहे हैं?",
+        "आप AI और Industrial Engineering को कैसे जोड़ते हैं?",
+        "आपके शैक्षणिक लक्ष्य क्या हैं?"
       ]
     }
   },
   "insights": {
-    "title": "AI ????? ????????",
-    "subtitle": "???? ?????? ????????? ?? ????????? ??????????? ??????? ????",
-    "generate": "???????? ?????",
-    "regenerate": "???? ?????",
-    "careerScore": "????? ?????",
-    "strengths": "????? ??????",
-    "uniqueValue": "????? ????????",
-    "marketFit": "?????? ????????",
-    "recommendations": "??????????",
-    "skillsRadar": "???? ????",
-    "salaryRange": "???????? ???? ????",
-    "careerPaths": "????? ??",
-    "loading": "???? ????????? ????????? ?? ??? ??...",
-    "error": "??????????? ????? ??? ?????? ???? ??? ?? ?????? ?????",
+    "title": "AI करियर विश्लेषण",
+    "subtitle": "अपने पेशेवर प्रोफ़ाइल पर वैयक्तिकृत इनसाइट्स प्राप्त करें",
+    "generate": "विश्लेषण बनाएं",
+    "regenerate": "फिर से बनाएं",
+    "careerScore": "करियर स्कोर",
+    "strengths": "मुख्य ताकतें",
+    "uniqueValue": "विशिष्ट मूल्य",
+    "marketFit": "मार्केट फिट",
+    "recommendations": "सिफारिशें",
+    "skillsRadar": "कौशल रडार",
+    "salaryRange": "अनुमानित वेतन सीमा",
+    "careerPaths": "करियर पथ",
+    "loading": "आपकी प्रोफ़ाइल का विश्लेषण हो रहा है...",
+    "error": "इनसाइट्स बनाने में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "scoreNote": {
-      "excellent": "???????? ?????? ?????????",
-      "good": "????? ?????? ??????",
-      "improve": "????? ?? ????"
+      "excellent": "उत्कृष्ट पेशेवर प्रोफ़ाइल",
+      "good": "अच्छी वृद्धि क्षमता",
+      "improve": "सुधार के अवसर"
     },
-    "salaryPeriod": "????",
+    "salaryPeriod": "वर्ष",
     "radar": {
       "ai": "AI/ML",
-      "programming": "????????????",
-      "industrial": "???????????",
-      "softSkills": "????? ???????",
-      "languages": "??????"
+      "programming": "प्रोग्रामिंग",
+      "industrial": "इंडस्ट्रियल",
+      "softSkills": "सॉफ्ट स्किल्स",
+      "languages": "भाषाएं"
     }
   },
   "resumeAnalyzer": {
-    "title": "????????? ????????",
-    "subtitle": "????? ??????? ?? ??? ???? ????????? ?? ??????? ???????? ??????? ????",
-    "analyze": "????????? ????????? ????",
-    "reanalyze": "???? ????????? ????",
-    "loading": "????????? ?? ???????? ?? ??? ??...",
-    "completeness": "????????? ?? ???????",
-    "atsScore": "ATS ??????",
-    "sections": "??? ????????",
-    "gaps": "????? ?? ???????",
-    "strengths": "??????",
-    "improvements": "??????????",
-    "overall": "??? ??????",
-    "error": "????????? ???????? ??? ?????? ???? ??? ?? ?????? ?????",
+    "title": "CV विश्लेषक",
+    "subtitle": "सुधार सुझावों के साथ अपने CV का विस्तृत विश्लेषण प्राप्त करें",
+    "analyze": "CV विश्लेषण करें",
+    "reanalyze": "फिर से विश्लेषण करें",
+    "loading": "CV का विश्लेषण हो रहा है...",
+    "completeness": "CV पूर्णता",
+    "atsScore": "ATS संगतता",
+    "sections": "सेक्शन विश्लेषण",
+    "gaps": "सुधार के क्षेत्र",
+    "strengths": "ताकतें",
+    "improvements": "सिफारिशें",
+    "overall": "समग्र सारांश",
+    "error": "CV विश्लेषण में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "sectionNames": {
-      "personal": "????????? ???????",
-      "profile": "?????????",
-      "education": "??????",
-      "experience": "?????",
-      "skills": "????",
-      "certificates": "??????????",
-      "projects": "???????????"
+      "personal": "व्यक्तिगत जानकारी",
+      "profile": "प्रोफ़ाइल",
+      "education": "शिक्षा",
+      "experience": "अनुभव",
+      "skills": "कौशल",
+      "certificates": "प्रमाणपत्र",
+      "projects": "प्रोजेक्ट्स"
     }
   },
   "skillRecommender": {
-    "title": "???? ?????",
-    "subtitle": "???? ????????? ?? ????? ???? ?? ??? ???? ???? ?????",
-    "generate": "????? ??????? ????",
-    "regenerate": "???? ??????? ????",
-    "loading": "???? ????????? ????????? ?? ??? ??...",
-    "recommended": "????? ?? ????",
-    "trends": "?????? ?????",
-    "advice": "????? ????",
-    "difficulty": "??????",
-    "time": "???????? ???",
-    "resources": "??????",
-    "error": "????? ????? ??? ?????? ???? ??? ?? ?????? ?????",
+    "title": "कौशल सिफारिशें",
+    "subtitle": "अपने प्रोफ़ाइल को मजबूत करने के लिए पूरक कौशल खोजें",
+    "generate": "सिफारिशें प्राप्त करें",
+    "regenerate": "फिर से बनाएं",
+    "loading": "आपकी प्रोफ़ाइल का विश्लेषण हो रहा है...",
+    "recommended": "सिफारिश किए गए कौशल",
+    "trends": "बाज़ार रुझान",
+    "advice": "करियर सलाह",
+    "difficulty": "कठिनाई",
+    "time": "अनुमानित समय",
+    "resources": "संसाधन",
+    "error": "सिफारिशें बनाने में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "difficultyLabels": {
-      "easy": "????",
-      "medium": "?????",
-      "hard": "????"
+      "easy": "आसान",
+      "medium": "मध्यम",
+      "hard": "कठिन"
     }
   }
 }
