--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -62,7 +62,7 @@
     "completed": "修了",
     "inProgress": "在学中",
     "estimatedProgress": "推定進捗",
-    "completionLabel": "????"
+    "completionLabel": "修了"
   },
   "certificates": {
     "title": "資格・認定",
@@ -83,7 +83,7 @@
     "previous": "前へ",
     "next": "次へ",
     "close": "閉じる",
-    "descriptionLabel": "??"
+    "descriptionLabel": "説明"
   },
   "projects": {
     "title": "プロジェクト",
@@ -143,7 +143,7 @@
     ],
     "typing": "入力中...",
     "error": "回答の取得中にエラーが発生しました。もう一度お試しください。",
-    "suggestedLabel": "????????"
+    "suggestedLabel": "おすすめの質問:"
   },
   "common": {
     "loading": "読み込み中...",
@@ -158,104 +158,104 @@
     "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
   },
   "qa": {
-    "ask": "????",
-    "placeholder": "?????...",
-    "suggested": "????????",
-    "thinking": "???...",
-    "error": "??????????????????????????????",
+    "ask": "質問する",
+    "placeholder": "質問を入力...",
+    "suggested": "おすすめの質問:",
+    "thinking": "考え中...",
+    "error": "回答の取得に失敗しました。もう一度お試しください。",
     "suggestions": {
       "skills": [
-        "??AI??????????",
-        "??????????????",
-        "???????????????????"
+        "なぜAIを専門に選んだのですか？",
+        "最も強いスキルは何ですか？",
+        "これらの技術はどうやって学びましたか？"
       ],
       "projects": [
-        "Conecta Panam?????????",
-        "??????????",
-        "???AI?????????????"
+        "Conecta Panamáで最大の課題は何でしたか？",
+        "最もよく使った技術は何ですか？",
+        "他にもAIプロジェクトはありますか？"
       ],
       "experience": [
-        "?????????????",
-        "??????????",
-        "????????????????"
+        "経験から何を学びましたか？",
+        "最大の職業的成果は何でしたか？",
+        "どのような仕事を探していますか？"
       ],
       "education": [
-        "??2???????????????",
-        "AI???????????????????",
-        "????????????"
+        "なぜ2つの学位を学んでいるのですか？",
+        "AIと産業工学をどう組み合わせていますか？",
+        "学術的な目標は何ですか？"
       ]
     }
   },
   "insights": {
-    "title": "AI??????",
-    "subtitle": "????????????????????????????",
-    "generate": "?????",
-    "regenerate": "???",
-    "careerScore": "???????",
-    "strengths": "????",
-    "uniqueValue": "????",
-    "marketFit": "????",
-    "recommendations": "????",
-    "skillsRadar": "???????",
-    "salaryRange": "??????",
-    "careerPaths": "??????",
-    "loading": "??????????...",
-    "error": "??????????????????????????????",
+    "title": "AIキャリア分析",
+    "subtitle": "あなたの職業プロフィールに合わせたインサイトを取得",
+    "generate": "分析を生成",
+    "regenerate": "再生成",
+    "careerScore": "キャリアスコア",
+    "strengths": "主な強み",
+    "uniqueValue": "独自の価値",
+    "marketFit": "市場適合度",
+    "recommendations": "提案",
+    "skillsRadar": "スキルレーダー",
+    "salaryRange": "推定年収レンジ",
+    "careerPaths": "キャリアパス",
+    "loading": "プロフィールを分析中...",
+    "error": "インサイトの生成に失敗しました。もう一度お試しください。",
     "scoreNote": {
-      "excellent": "???????????",
-      "good": "?????????",
-      "improve": "???????"
+      "excellent": "優れた職業プロフィール",
+      "good": "良好な成長ポテンシャル",
+      "improve": "改善の余地"
     },
-    "salaryPeriod": "?",
+    "salaryPeriod": "年",
     "radar": {
       "ai": "AI/ML",
-      "programming": "???????",
-      "industrial": "????",
-      "softSkills": "??????",
-      "languages": "??"
+      "programming": "プログラミング",
+      "industrial": "産業",
+      "softSkills": "ソフトスキル",
+      "languages": "言語"
     }
   },
   "resumeAnalyzer": {
-    "title": "?????",
-    "subtitle": "??????????????????",
-    "analyze": "??????",
-    "reanalyze": "???",
-    "loading": "???????...",
-    "completeness": "???????",
-    "atsScore": "ATS???",
-    "sections": "???????",
-    "gaps": "???",
-    "strengths": "??",
-    "improvements": "????",
-    "overall": "?????",
-    "error": "???????????????????????????????",
+    "title": "履歴書アナライザー",
+    "subtitle": "改善提案付きで履歴書を詳しく分析します",
+    "analyze": "履歴書を分析",
+    "reanalyze": "再分析",
+    "loading": "履歴書を分析中...",
+    "completeness": "履歴書の完成度",
+    "atsScore": "ATS適合度",
+    "sections": "セクション分析",
+    "gaps": "改善点",
+    "strengths": "強み",
+    "improvements": "改善提案",
+    "overall": "総合サマリー",
+    "error": "履歴書の分析に失敗しました。もう一度お試しください。",
     "sectionNames": {
-      "personal": "????",
-      "profile": "??????",
-      "education": "??",
-      "experience": "??",
-      "skills": "???",
-      "certificates": "????",
-      "projects": "??????"
+      "personal": "個人情報",
+      "profile": "プロフィール",
+      "education": "学歴",
+      "experience": "経験",
+      "skills": "スキル",
+      "certificates": "資格",
+      "projects": "プロジェクト"
     }
   },
   "skillRecommender": {
-    "title": "?????",
-    "subtitle": "????????????????????",
-    "generate": "?????",
-    "regenerate": "???",
-    "loading": "??????????...",
-    "recommended": "?????",
-    "trends": "??????",
-    "advice": "?????????",
-    "difficulty": "???",
-    "time": "????",
-    "resources": "????",
-    "error": "??????????????????????????????",
+    "title": "スキル推薦",
+    "subtitle": "プロフィールを強化するための補完スキルを発見",
+    "generate": "推薦を取得",
+    "regenerate": "再生成",
+    "loading": "プロフィールを分析中...",
+    "recommended": "おすすめスキル",
+    "trends": "市場トレンド",
+    "advice": "キャリアアドバイス",
+    "difficulty": "難易度",
+    "time": "推定時間",
+    "resources": "リソース",
+    "error": "推薦の生成に失敗しました。もう一度お試しください。",
     "difficultyLabels": {
-      "easy": "??",
-      "medium": "??",
-      "hard": "???"
+      "easy": "易しい",
+      "medium": "普通",
+      "hard": "難しい"
     }
   }
 }
